--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server1.js",
+    "start": "node server.js",
     "seed": "node seeder.js"
   },
   "keywords": [],
