--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,8 @@ DB_NAME=sample_mflix
 
 PORT=5000
 JWT_SECRET=068818d8623f7266816939867f1bc1ff
+
+
+CLOUDINARY_CLOUD_NAME= dzozzxa5v
+CLOUDINARY_API_KEY=115566776894232
+CLOUDINARY_API_SECRET=ET0Uek1k_zRGCMg0DWLqjKGMN00
